@@ -1,11 +1,11 @@
 package au.org.aodn.nrmn.restapi.integration;
 
-import static org.junit.Assert.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,9 +21,12 @@ import au.org.aodn.nrmn.restapi.service.validation.DataValidation;
 import au.org.aodn.nrmn.restapi.test.PostgresqlContainerExtension;
 import au.org.aodn.nrmn.restapi.test.annotations.WithTestData;
 
+import javax.transaction.Transactional;
+
 @Testcontainers
 @SpringBootTest
 @WithTestData
+@Transactional
 @ExtendWith(PostgresqlContainerExtension.class)
 class DiverExistsIT {
 
@@ -40,7 +43,7 @@ class DiverExistsIT {
         StagedRow row = new StagedRow();
         row.setDiver("NOP");
         row.setStagedJob(job);
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"), Arrays.asList(), Arrays.asList(row));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"), List.of(), List.of(row));
         assertTrue(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("Diver does not exist")));
     }
 
@@ -51,8 +54,8 @@ class DiverExistsIT {
         StagedRow row = new StagedRow();
         row.setStagedJob(job);
         row.setDiver("JEP");
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"), Arrays.asList(), Arrays.asList(row));
-        assertFalse(res.stream().anyMatch(e -> e.getColumnNames().contains("diver") && e.getMessage().equalsIgnoreCase("Diver does not exist")));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"), List.of(), List.of(row));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getColumnNames().contains("diver") && e.getMessage().equalsIgnoreCase("Diver does not exist")));
     }
 
     @Test
@@ -62,7 +65,7 @@ class DiverExistsIT {
         StagedRow row = new StagedRow();
         row.setStagedJob(job);
         row.setDiver("Juán Español Página");
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"), Arrays.asList(), Arrays.asList(row));
-        assertFalse(res.stream().anyMatch(e -> e.getColumnNames().contains("diver") && e.getMessage().equalsIgnoreCase("Diver does not exist")));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"), List.of(), List.of(row));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getColumnNames().contains("diver") && e.getMessage().equalsIgnoreCase("Diver does not exist")));
     }
 }
