@@ -1,16 +1,12 @@
 package au.org.aodn.nrmn.restapi.integration;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Optional;
+import java.util.*;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -29,9 +25,12 @@ import au.org.aodn.nrmn.restapi.test.PostgresqlContainerExtension;
 import au.org.aodn.nrmn.restapi.test.annotations.WithTestData;
 import au.org.aodn.nrmn.restapi.util.TimeUtils;
 
+import javax.transaction.Transactional;
+
 @Testcontainers
 @SpringBootTest
 @ExtendWith(PostgresqlContainerExtension.class)
+@Transactional
 @WithTestData
 class StagedRowFormattedMappingIT {
 
@@ -44,21 +43,26 @@ class StagedRowFormattedMappingIT {
     @Test
     void inputRespectingFormatShouldSucceed() {
 
-        StagedJob job = new StagedJob();
-        job.setId(1L);
-        job.setIsExtendedSize(false);
+        StagedJob job = StagedJob.builder()
+                .id(1L)
+                .isExtendedSize(false)
+                .build();
+
         Program program = new Program();
         program.setProgramId(1);
         program.setProgramName("RLS");
         job.setProgram(program);
-        StagedRow row = new StagedRow();
-        row.setSiteCode("EYR71");
-        row.setSiteName("South East Slade Point");
-        row.setLongitude("154");
-        row.setLatitude("-35");
-        row.setDate("16/11/20");
-        row.setTime("11:32");
-        row.setDiver("JEP");
+
+        StagedRow row = StagedRow.builder()
+                .siteCode("EYR71")
+                .siteName("South East Slade Point")
+                .longitude("154")
+                .latitude("-35")
+                .date("16/11/20")
+                .time("11:32")
+                .diver("JEP")
+                .build();
+
         row.setDepth("7.4");
         row.setMethod("1");
         row.setBlock("1");
@@ -71,7 +75,7 @@ class StagedRowFormattedMappingIT {
         row.setVis("10.0");
         row.setTotal("2");
         row.setStagedJob(job);
-        row.setMeasureJson(new HashMap<Integer, String>() {
+        row.setMeasureJson(new HashMap<>() {
             {
                 put(1, "1");
                 put(2, "12");
@@ -80,27 +84,30 @@ class StagedRowFormattedMappingIT {
         });
 
         Collection<ObservableItem> species = observableItemRepository
-                .getAllSpeciesNamesMatching(Arrays.asList(row.getSpecies()));
-        Collection<StagedRowFormatted> validatedRows = speciesFormatting.formatRowsWithSpecies(Arrays.asList(row),
+                .getAllSpeciesNamesMatching(Collections.singletonList(row.getSpecies()));
+        Collection<StagedRowFormatted> validatedRows = speciesFormatting.formatRowsWithSpecies(List.of(row),
                 species);
 
         assertEquals(1, validatedRows.size());
         StagedRowFormatted formattedRow = (StagedRowFormatted) validatedRows.toArray()[0];
-        assertEquals("EYR71", formattedRow.getSite().getSiteCode());
-        assertEquals("South East Slade Point", formattedRow.getSite().getSiteName());
-        assertEquals(154, formattedRow.getLongitude());
-        assertEquals(-35, formattedRow.getLatitude());
-        assertEquals(LocalDate.parse("16/11/2020", DateTimeFormatter.ofPattern("d/M/yyyy")), formattedRow.getDate());
-        assertEquals(TimeUtils.parseTime("11:32"), formattedRow.getTime());
-        assertEquals("JEP", formattedRow.getDiver().getInitials());
-        assertEquals("Juan Espanol Pagina", formattedRow.getDiver().getFullName());
-        assertEquals(1, formattedRow.getBlock());
-        assertEquals(Directions.NE, formattedRow.getDirection());
-        assertEquals(102, formattedRow.getSpecies().get().getAphiaId());
-        assertEquals(1, formattedRow.getMeasureJson().get(13));
-        assertEquals(Optional.of(10.0), formattedRow.getVis());
-        assertEquals(4, formattedRow.getSurveyNum());
-        assertEquals(7, formattedRow.getDepth());
+
+        Assertions.assertEquals("EYR71", formattedRow.getSite().getSiteCode());
+        Assertions.assertEquals("South East Slade Point", formattedRow.getSite().getSiteName());
+        Assertions.assertEquals(154, formattedRow.getLongitude());
+        Assertions.assertEquals(-35, formattedRow.getLatitude());
+        Assertions.assertEquals(LocalDate.parse("16/11/2020", DateTimeFormatter.ofPattern("d/M/yyyy")), formattedRow.getDate());
+        Assertions.assertEquals(TimeUtils.parseTime("11:32"), formattedRow.getTime());
+        Assertions.assertEquals("JEP", formattedRow.getDiver().getInitials());
+        Assertions.assertEquals("Juan Espanol Pagina", formattedRow.getDiver().getFullName());
+        Assertions.assertEquals(1, formattedRow.getBlock());
+        Assertions.assertEquals(Directions.NE, formattedRow.getDirection());
+
+        Assertions.assertTrue(formattedRow.getSpecies().isPresent());
+        Assertions.assertEquals(102, formattedRow.getSpecies().get().getAphiaId());
+        Assertions.assertEquals(1, formattedRow.getMeasureJson().get(13));
+        Assertions.assertEquals(Optional.of(10.0), formattedRow.getVis());
+        Assertions.assertEquals(4, formattedRow.getSurveyNum());
+        Assertions.assertEquals(7, formattedRow.getDepth());
     }
 
     @Test
@@ -132,39 +139,39 @@ class StagedRowFormattedMappingIT {
         row.setTime("Eleven:Thirty");
         row.setTotal("]]]]]]");
         row.setVis("Very Murky");
-        row.setMeasureJson(new HashMap<Integer, String>() {
+        row.setMeasureJson(new HashMap<>() {
             {
                 put(13, "1]");
             }
         });
 
         Collection<ObservableItem> species = observableItemRepository
-                .getAllSpeciesNamesMatching(Arrays.asList(row.getSpecies()));
+                .getAllSpeciesNamesMatching(Collections.singletonList(row.getSpecies()));
 
         Collection<StagedRowFormatted> validatedRows = speciesFormatting
-                .formatRowsWithSpecies(Arrays.asList(row), species);
+                .formatRowsWithSpecies(List.of(row), species);
 
         assertEquals(1, validatedRows.size());
 
         StagedRowFormatted formattedRow = (StagedRowFormatted) validatedRows.toArray()[0];
 
-        assertNull(formattedRow.getBlock());
-        assertNull(formattedRow.getDate());
-        assertNull(formattedRow.getDepth());
-        assertNull(formattedRow.getDirection());
-        assertNull(formattedRow.getDiver());
-        assertNull(formattedRow.getInverts());
-        assertNull(formattedRow.getLatitude());
-        assertNull(formattedRow.getLongitude());
-        assertNull(formattedRow.getMethod());
-        assertNull(formattedRow.getPqs());
-        assertNull(formattedRow.getSite());
-        assertNull(formattedRow.getTotal());
-        assertNull(formattedRow.getMeasureJson().get(13));
+        Assertions.assertNull(formattedRow.getBlock());
+        Assertions.assertNull(formattedRow.getDate());
+        Assertions.assertNull(formattedRow.getDepth());
+        Assertions.assertNull(formattedRow.getDirection());
+        Assertions.assertNull(formattedRow.getDiver());
+        Assertions.assertNull(formattedRow.getInverts());
+        Assertions.assertNull(formattedRow.getLatitude());
+        Assertions.assertNull(formattedRow.getLongitude());
+        Assertions.assertNull(formattedRow.getMethod());
+        Assertions.assertNull(formattedRow.getPqs());
+        Assertions.assertNull(formattedRow.getSite());
+        Assertions.assertNull(formattedRow.getTotal());
+        Assertions.assertNull(formattedRow.getMeasureJson().get(13));
 
-        assertFalse(formattedRow.getSpecies().isPresent());
-        assertFalse(formattedRow.getTime().isPresent());
-        assertFalse(formattedRow.getVis().isPresent());
+        Assertions.assertFalse(formattedRow.getSpecies().isPresent());
+        Assertions.assertFalse(formattedRow.getTime().isPresent());
+        Assertions.assertFalse(formattedRow.getVis().isPresent());
     }
 
     @Test
@@ -179,7 +186,7 @@ class StagedRowFormattedMappingIT {
             job.setProgram(program);
             StagedRow row = new StagedRow();
             row.setStagedJob(job);
-            row.setMeasureJson(new HashMap<Integer, String>() {
+            row.setMeasureJson(new HashMap<>() {
                 {
                     put(1, "0");
                     put(2, "222");
@@ -190,13 +197,13 @@ class StagedRowFormattedMappingIT {
             });
     
             Collection<ObservableItem> species = observableItemRepository
-                    .getAllSpeciesNamesMatching(Arrays.asList(row.getSpecies()));
-            Collection<StagedRowFormatted> validatedRows = speciesFormatting.formatRowsWithSpecies(Arrays.asList(row),
+                    .getAllSpeciesNamesMatching(Collections.singletonList(row.getSpecies()));
+            Collection<StagedRowFormatted> validatedRows = speciesFormatting.formatRowsWithSpecies(List.of(row),
                     species);
 
             StagedRowFormatted formattedRow = (StagedRowFormatted) validatedRows.toArray()[0];
-            assertEquals(2, formattedRow.getMeasureJson().size());
-            assertEquals(222, formattedRow.getMeasureJson().get(2));
-            assertEquals(444, formattedRow.getMeasureJson().get(4));
+            Assertions.assertEquals(2, formattedRow.getMeasureJson().size());
+            Assertions.assertEquals(222, formattedRow.getMeasureJson().get(2));
+            Assertions.assertEquals(444, formattedRow.getMeasureJson().get(4));
     }
 }
